# compiler-web

./: .gitignore  ecosystem.config.json  start.sh
next/: package-lock.json  package.json
next/app/: page.tsx
rust/: Cargo.toml
rust/src/: app.rs  main.rs
rust/src/handlers/: compile_handler.rs  mod.rs
rust/src/models/: compile_request.rs  compile_response.rs  mod.rs
rust/src/routes/: compile.rs  home.rs  mod.rs
rust/src/services/: compiler_service.rs  executor.rs  mod.rs  sandbox.rs  ws.rs
